@@ -1,3 +1,8 @@
+2010-01-11  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Fix buggy initialization of the browser list
+	when nothing specified. Problem spotted by ferrieux.
+
 2009-12-13  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: [wm state] doesn't support zoomed on x11.
